SalesforceRecruitingOnSecondOrg/src/objects/Selected_Job__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Info__c</fullName>
        <label>Additional Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CandidateCV__c</fullName>
        <label>CandidateCV</label>
        <referenceTo>CandidateCV__c</referenceTo>
        <relationshipLabel>Selected Jobs</relationshipLabel>
        <relationshipName>Selected_Jobs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Candidate_Age__c</fullName>
        <label>Candidate Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Candidate_Phone__c</fullName>
        <label>Candidate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Candidate_Salary__c</fullName>
        <label>Candidate Salary</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Status__c</fullName>
        <label>Candidate Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unemployed</fullName>
                </value>
                <value>
                    <fullName>Employed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Number__c</fullName>
        <externalId>true</externalId>
        <label>External Number</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Job_Advertisement__c</fullName>
        <label>Job Advertisement</label>
        <referenceTo>Job_Advertisement__c</referenceTo>
        <relationshipLabel>Selected Jobs</relationshipLabel>
        <relationshipName>Selected_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Selected Job</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Selected_Job-{0000}</displayFormat>
        <label>Selected Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Selected Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>